<resources>
<string name="acceleration_reading">%1$,.3f g</string>
<string name="acceleration_x">Acceleration X</string>
<string name="acceleration_y">Acceleration Y</string>
<string name="acceleration_z">Acceleration Z</string>
<string name="add_tag_not_found">No sensors found</string>
<string name="add_tag_title">Nearby sensors detection</string>
<string name="ago">ago</string>
<string name="alarm_custom_title_hint">Set custom description...</string>
<string name="alarm_mute_for_hour">Mute for an hour</string>
<string name="alarm_notification_disable">Disable this alarm</string>
<string name="alert_movement">Movement</string>
<string name="alert_movement_description">Alert when sensor is moved</string>
<string name="alert_notification_humidity_high">Air Humidity too high!</string>
<string name="alert_notification_humidity_low">Air Humidity too low!</string>
<string name="alert_notification_movement">Movement detected!</string>
<string name="alert_notification_pressure_high">Air Pressure is too high!</string>
<string name="alert_notification_pressure_low">Air Pressure is too low!</string>
<string name="alert_notification_rssi_high">Signal strength too high!</string>
<string name="alert_notification_rssi_low">Signal strength too low!</string>
<string name="alert_notification_temperature_high">Temperature too high!</string>
<string name="alert_notification_temperature_low">Temperature too low!</string>
<string name="alert_subtitle_off">Off</string>
<string name="alert_subtitle_on">Alert when less than %1$,d or more than %2$,d</string>
<string name="alerts">ALERTS</string>
<string name="app_name">Lightricity App</string>
<string name="background_image">BACKGROUND\nIMAGE</string>
<string name="background_notification_message">You can disable background scanning in settings</string>
<string name="background_notification_scanning_every">Scanning every</string>
<string name="battery_voltage">Battery Voltage</string>
<string name="beta">beta</string>
<string name="calibrate">Calibrate</string>
<string name="calibrated">Calibrated: %1$s</string>
<string name="calibration_done">Calibration done!</string>
<string name="calibration_hint">%1$d%% -> 75%%</string>
<string name="calibration_humidity">In order to measure relative humidity as accurately as possible, a sodium chloride (salt) calibration is recommended. See video tutorials on how to easily do it at home.</string>
<string name="calibration_humidity_button">Calibrate hygrometer</string>
<string name="calibration_humidity_disclaimer">Note that calibration data will be stored locally in your mobile device. After Lightricity App uninstall \u0026 install, you may need to recalibrate.</string>
<string name="calibration_humidity_link">video tutorials</string>
<string name="calibration_humidity_link_url">https://www.youtube.com/results?search_query=hygrometer+salt+calibration</string>
<string name="camera">Camera</string>
<string name="camera_fail">Could not start camera</string>
<string name="cancel">Cancel</string>
<string name="charts_background_dialog_description">Charts feature works best with background scanning enabled.</string>
<string name="charts_background_dialog_title_question">Would you like to enable background scanning?</string>
<string name="clear">Clear</string>
<string name="clear_confirm">Clear the historical data from the app?</string>
<string name="close">Close</string>
<string name="connected_reading_info">Syncing...</string>
<string name="connecting">Connecting...</string>
<string name="dashboard">Dashboard</string>
<string name="dashboard_description">Use dashboard view to see multiple sensors at a glance. Restart the app after enabled.</string>
<string name="dashboard_empty">Your dashboard \nis empty</string>
<string name="data_format">Data Format</string>
<string name="data_points_read">%1$,d measurements read, saving..</string>
<string name="days">Days</string>
<string name="disconnected">Disconnected</string>
<string name="email">Email</string>
<string name="export">EXPORT</string>
<string name="export_csv_chooser_title">Sensor %1$s csv export</string>
<string name="export_csv_created">.csv created, opening share menu</string>
<string name="export_csv_failed">Failed to create CSV file</string>
<string name="export_csv_header_format2_4">Timestamp,Temperature (%1$s), Humidity (%2$s), Pressure (%3$s),RSSI</string>
<string name="export_csv_header_format3">Timestamp,Temperature (%1$s), Humidity (%2$s), Pressure (%3$s), Light (%4$s), Sound (%5$s), CO2 (%6$s), RSSI, Acceleration X, Acceleration Y, Acceleration Z, Magnetic X, Magnetic Y, Magnetic Z</string>
<string name="export_csv_header_format5">Timestamp,Temperature (%1$s), Humidity (%2$s), Pressure (%3$s),RSSI,Acceleration X,Acceleration Y,Acceleration Z,Voltage,Movement counter,Measurement sequence number</string>
<string name="file_not_supported">File type not supported</string>
<string name="gallery">Gallery</string>
<string name="gateway_disabled">Disabled</string>
<string name="gateway_test_exception">Nope, did not work. Is the URL correct?</string>
<string name="gateway_test_fail">Nope, did not work. Response code: %1$d</string>
<string name="gateway_test_success">Gateway works! Response code: %1$d</string>
<string name="gateway_testing">Testing...</string>
<string name="gateway_url">Gateway URL</string>
<string name="gateway_url_hint">https://your.gateway/...</string>
<string name="h">h</string>
<string name="help_about_text">Lightricity App is an easy-to-use but powerful tool to supercharge your sensors. Just add some sensors and you\'re ready to go.</string>
<string name="help_about_title">ABOUT / HELP</string>
<string name="help_added_tags">Added sensors: %1$,d</string>
<string name="help_db_data_points">Stored measurements: %1$,d</string>
<string name="help_db_size">Database size: %1$,d kB</string>
<string name="help_more_to_read_text">Lightricity\'s website: lightricity.co.uk\n</string>
<string name="help_more_to_read_title">MORE TO READ</string>
<string name="help_opensource_text">Lightricity App is based on the open-source app Ruuvi Station: github.com/ruuvi</string>
<string name="help_opensource_title">OPEN-SOURCE</string>
<string name="help_operations_text">We have designed the app to be self-explanatory but also comprehensive.</string>
<string name="help_operations_title">OPERATIONS MANUAL</string>
<string name="help_privacy_policy_text">By using the application, you accept lightricity\'s standard terms and conditions\nruuvi.com/terms</string>
<string name="help_privacy_policy_title">PRIVACY POLICY</string>
<string name="help_seen_tags">Seen sensors: %1$,d</string>
<string name="help_troubleshooting_text">If you’re experiencing problems and our manuals didn’t provide the help you need, contact us, here: lightricity.com/troubles</string>
<string name="help_troubleshooting_title">TROUBLESHOOTING</string>
<string name="hours">Hours</string>
<string name="humidity">Air Humidity (%1$s)</string>
<string name="humidity_absolute_name">Absolute (gr/m³)</string>
<string name="humidity_absolute_unit">g/m³</string>
<string name="humidity_dew_point_name">Dew point (°)</string>
<string name="humidity_dew_point_unit">°</string>
<string name="humidity_reading">%1$,.2f %2$s</string>
<string name="humidity_relative_name">Relative (%)</string>
<string name="humidity_relative_unit">%</string>
<string name="language_english">English</string>
<string name="language_finnish">Suomi</string>
<string name="language_french">Français</string>
<string name="language_russian">Русский</string>
<string name="language_swedish">Svenska</string>
<string name="login_description">To enjoy all the features, create an account or login to your existing Ruuvi account by entering your email address.</string>
<string name="login_to_ruuvi_network">Login to\nRuuvi\nNetwork</string>
<string name="mac_address">MAC Address</string>
<string name="mac_copied">MAC address copied to clipboard</string>
<string name="measurement_sequence_number">Measurement Sequence Number</string>
<string name="menu_about_help">About / Help</string>
<string name="menu_add_new_sensor">Add a New Sensor</string>
<string name="menu_app_settings">App Settings</string>
<string name="menu_get_more_sensors">Get More Sensors</string>
<string name="menu_send_feedback">Send Feedback</string>
<string name="min">min</string>
<string name="minutes">Minutes</string>
<string name="more_info">MORE INFO</string>
<string name="movement_counter">Movement Counter</string>
<string name="name">NAME</string>
<string name="navigation_drawer_close">Close the navigation drawer</string>
<string name="navigation_drawer_open">Open the navigation drawer</string>
<string name="network_status_title">Ruuvi Network status</string>
<string name="network_sync_result_exception">Synchronization failed: %1$s</string>
<string name="network_sync_result_not_logged">Synchronization failed: need to log in first</string>
<string name="network_sync_result_success">Synchronized successfully!</string>
<string name="network_synced">Synchronized: %1$s</string>
<string name="network_syncing">Syncing…</string>
<string name="network_user">User: %1$s</string>
<string name="never">never</string>
<string name="no">No</string>
<string name="no_new_data_points">No new data points available</string>
<string name="none">none</string>
<string name="ok">OK</string>
<string name="permission_background_dialog_title">Enable Background Scanning</string>
<string name="permission_dialog_background_request_message">In order to scan nearby Bluetooth devices in the background, Android requires background location access to be enabled. \n\nPlease click allow all the time if you\'d like to use the background scanning feature. \n\nLightricity doesn\'t track your movements. You\'re safe.</string>
<string name="permission_dialog_request_message">In order to scan nearby Bluetooth devices, Android requires location access to be enabled. \n\nLightricity doesn\'t track your movements. You\'re safe.</string>
<string name="permission_dialog_title">Enable Bluetooth Scanning</string>
<string name="permission_location_needed">Please enable location permission in settings to see sensors.</string>
<string name="press_to_add">No sensors added,\npress here to add sensors</string>
<string name="pressure">Air Pressure (%1$s)</string>
<string name="pressure_hpa_name">Hectopascal (hPa)</string>
<string name="pressure_hpa_unit">hPa</string>
<string name="pressure_inhg_name">Inch of mercury (inHg)</string>
<string name="pressure_inhg_unit">inHg</string>
<string name="pressure_mmhg_name">Millimetre of mercury (mmHg)</string>
<string name="pressure_mmhg_unit">mmHg</string>
<string name="pressure_pa_name">Pascal (Pa)</string>
<string name="pressure_pa_unit">Pa</string>
<string name="pressure_reading">%1$,.2f %2$s</string>
<string name="pressure_reading_pa">%1$,.0f %2$s</string>
<string name="reading_history">Reading history</string>
<string name="reading_history_not_supported">Firmware not supported</string>
<string name="rssi">Signal strength (RSSI)</string>
<string name="s">s</string>
<string name="scan">SCAN</string>
<string name="sec">sec</string>
<string name="settings_background_scan">Background Scanning Settings</string>
<string name="settings_chart">Chart Settings</string>
<string name="settings_chart_description">Configure interval between points shown on chart and history diapason</string>
<string name="settings_experimental">Experimental features</string>
<string name="settings_gateway">Gateway Settings</string>
<string name="settings_humidity_unit">Humidity Unit</string>
<string name="settings_pressure_unit">Pressure Unit</string>
<string name="settings_temperature_unit">Temperature Unit</string>
<string name="sync">SYNC</string>
    <string name="enable_experimental_features">Enable experimental features</string>
    <string name="pdu_configuration">Configure the data format of the payload</string>
    <string name="settings_pduFormat">PDU Format</string>
</resources>