<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".settings.ui.AppSettingsListFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/scanLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/bgScanTitleTextView"
                    style="@style/PrefTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_background_scan" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/bgScanDescriptionTextView"
                    style="@style/PrefSecondaryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Allows for scanning when the app is running in the background and define how often the background scanning will run" />
            </LinearLayout>

            <include layout="@layout/divider" />

            <LinearLayout
                android:id="@+id/temperatureUnitLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/temperatureUnitTitleTextView"
                    style="@style/PrefTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_temperature_unit" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/temperatureUnitSubTextView"
                    style="@style/PrefSecondaryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Celsius / Fahrenheit / Kelvin" />
            </LinearLayout>

            <include layout="@layout/divider" />

            <LinearLayout
                android:id="@+id/humidityUnitLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/humidityUnitTitleTextView"
                    style="@style/PrefTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_humidity_unit" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/humidityUnitSubTextView"
                    style="@style/PrefSecondaryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Relative / Absolute / Dew Point" />
            </LinearLayout>

            <include layout="@layout/divider" />

            <LinearLayout
                android:id="@+id/pressureUnitLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/pressureUnitTitleTextView"
                    style="@style/PrefTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_pressure_unit" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/pressureUnitSubTextView"
                    style="@style/PrefSecondaryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Pascal / Hectopascal / Millimetre of mercury" />
            </LinearLayout>

            <include layout="@layout/divider" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <LinearLayout
                    android:id="@+id/dashboardLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@id/dashboardSwitch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/dashboardTitleTextView"
                        style="@style/PrefTitleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/PrefSecondaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard_description" />

                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/dashboardSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <include layout="@layout/divider" />

            <LinearLayout
                android:id="@+id/gatewaySettingsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/gatewayTitleTextView"
                    style="@style/PrefTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_gateway" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/gatewayUrlSubTextView"
                    style="@style/PrefSecondaryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLength="64"
                    android:maxLines="1"
                    android:text="@string/gateway_url" />
            </LinearLayout>

            <include layout="@layout/divider" />

            <LinearLayout
                android:id="@+id/graphSettingsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/graphSettingsTitleTextView"
                    style="@style/PrefTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_chart" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/graphSettingsDescriptionTextView"
                    style="@style/PrefSecondaryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/settings_chart_description" />
            </LinearLayout>

                <include
                    layout="@layout/divider" />

            <LinearLayout
                android:id="@+id/PDUFormatLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/PDUFormatTextView"
                    style="@style/PrefTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_pduFormat" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/PDUFormatDescriptionTextView"
                    style="@style/PrefSecondaryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pdu_configuration"
                    android:ellipsize="end"
                    android:maxLength="64" />
            </LinearLayout>

            <include
                layout="@layout/divider" />

                <LinearLayout
                    android:id="@+id/experimentalSettingsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/experimentalSettingsTitleTextView"
                        style="@style/PrefTitleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_experimental" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/experimentalSettingsDescriptionTextView"
                        style="@style/PrefSecondaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enable_experimental_features"
                        android:ellipsize="end"
                        android:maxLength="64"
                        android:maxLines="1" />
                </LinearLayout>
            </LinearLayout>
    </FrameLayout>